--- a/index.html
+++ b/index.html
@@ -92,11 +92,13 @@
                 <name>Gowtham Kuntumalla</name>
               </p>
               <p>I am a second year Masters student at <a href="https://www.illinois.edu/">UIUC</a>. My academic advisor is Prof. <a href="https://mechanical.illinois.edu/directory/faculty/sanjiv">Sanjiv Sinha</a></p>
-              <p>In 2018, I received my Bachelor's degree in Mechanical Engineering with a minor in Computer Science at <a href="http://www.iitb.ac.in/">IIT Bombay</a>.  
+              <p>In 2018, I received my Bachelor's degree in Mechanical Engineering with a minor in Computer Science from <a href="http://www.iitb.ac.in/">IIT Bombay</a>.  
 			  </p>
-              <p> Most recently, I loved my engineering internship at <a href = "https://www.uber.com/"> Uber </a> in San Francisco.</p>
+              <p> Most recently, I interned at <a href = "https://www.uber.com/"> Uber </a> in San Francisco. It was a wonderful learning experience for me. Working on developing high-tech products and deploying them at scale
+			  was exciting!</p>
               
-              <p> I'm currently interested in working at the intersection of MechE and Computer Science. I am passionate about finding long term solutions for Clean Energy and Sustainable Tranportation. I believe in the power of simplicity! It is the key to solving hard problems. </p>
+              <p> I'm interested in working on large scale consumer products at the intersection of MechE and Computer Science. I am also passionate about finding long term solutions for Clean Energy and Sustainable Tranportation. </p>
+			  <p> I believe in the power of simplicity! It's the key to solving hard problems. </p>
               
               <p align=center>
                 <a href="mailto:gowthamkuntumalla@gmail.com">Email</a> &nbsp/&nbsp
@@ -224,8 +226,9 @@
 			(Anti-fouling coatings and Physics based machine learning algorithms for controlled maintenance) which are not presented there. </em>
               <br>
 			  <a href="images/UIUC_DOE_HXimg.jpg">[Image]</a>
-			  <a href="UIUC_ASME_GK.pdf">[Presentation]</a>
-              <a href="UIUC_ASME_GK.pdf">[Initial Publication]</a>
+			  <!--<a href="files/UIUC_ASME_GK.pdf">[Presentation]</a>-->
+              <a href="files/UIUC_ASME_GK.pdf">[Article 1]</a>
+			  <a href="https://www.sciencedirect.com/science/article/pii/S0017931019325748">[Article 2]</a>
 			  <a href="images/UIUC_R2R_CAD.jpg">[CAD]</a>
 			  <a href="images/UIUC_R2R_setup.jpg">[Production System]</a>
 			  <a href="https://mechanical.illinois.edu/news/sinha-leading-study-improve-low-temperature-heat-exchanger-performance">[Press]</a>
