--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 			(Anti-fouling coatings and Physics based machine learning algorithms for controlled maintenance) which are not presented here. </em>
               <br>
 			  <a href="images/UIUC_DOE_HXimg.jpg">[Image]</a>
-			  <!--<a href="files/UIUC_ASME_GK.pdf">[Presentation]</a>-->
+			  <a href="files/UIUC_IMECE2019_Presentation.pdf">[Presentation]</a>
               <a href="files/UIUC_ASME_GK.pdf">[Article 1]</a>
 			  <a href="https://www.sciencedirect.com/science/article/pii/S0017931019325748">[Article 2]</a>
 			  <a href="images/UIUC_R2R_CAD.jpg">[CAD]</a>
