--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
               </p>
 		    
 	      <p> I'm interested in working on large scale consumer products at the intersection of Engineering and Computer Science. 
-		  I like coding and staying up to date with the latest trends in the world of software programming. In the long term, I am also passionate about finding solutions for Clean Energy and Sustainable Tranportation.</p>
+		  I like coding and staying up to date with the latest trends in the world of software programming. 
+		  In the long term, I am passionate about finding solutions for Sustainable Transportation.</p>
 		    
 	      <p><strong> 1 min Bio </strong>: I am a second year Masters student at <a href="https://www.illinois.edu/">UIUC</a>. My current academic advisor is Prof. <a href="https://mechanical.illinois.edu/directory/faculty/sanjiv">Sanjiv Sinha</a> 
 		      In 2018, I received my Bachelor's degree in Mechanical Engineering with a minor in Computer Science from <a href="http://www.iitb.ac.in/">IIT Bombay</a>.  
