--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               
               <p align=center>
                 <a href="mailto:gowthamkuntumalla@gmail.com">Email</a> &nbsp/&nbsp
-                <a href="files/Gowtham_Resume.pdf">Resume</a> &nbsp/&nbsp
+                <a href="files/Resume_Gowtham_Kuntumalla.pdf">Resume</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?hl=en&user=H0JTpfwAAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/gowthamkuntumalla"> Github </a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/gowthamkuntumalla/"> LinkedIn</a>
