--- a/index.html
+++ b/index.html
@@ -104,11 +104,10 @@
                 <name>Gowtham Kuntumalla</name>
               </p>
 		    
-	      <p> I'm interested in working on large scale consumer products at the intersection of Engineering and Computer Science. 
+	      <p> I'm passionate about large scale products at the intersection of Engineering and Computer Science. 
 		  I like coding and staying up to date with the latest trends in the world of software programming. 
-		  I am passionate about working in fields at the intersection of Engineering and Computer Science. 
 		  With the advent of modern computing, bringing products to the market is becoming easier than ever. I would like to be a catalyst in this process.  
-		  At Uber, I had a truly enriching experience working with products at scale. During my Masters at UIUC, I developed a keen eye for detail and learned how to manage teams to achieve targets within deadlines.</p>
+		  At Uber, I had a truly enriching experience working with consumer products at scale. During my Masters at UIUC, I developed a keen eye for detail and learned how to manage teams to achieve targets within deadlines.</p>
 		    
 	      <p><strong> 1 min Bio </strong>: I am a second year Masters student at <a href="https://www.illinois.edu/">UIUC</a>. My current academic advisor is Prof. <a href="https://mechanical.illinois.edu/directory/faculty/sanjiv">Sanjiv Sinha</a> 
 		      In 2018, I received my Bachelor's degree in Mechanical Engineering with a minor in Computer Science from <a href="http://www.iitb.ac.in/">IIT Bombay</a>.  
