--- a/index.html
+++ b/index.html
@@ -209,9 +209,10 @@
 			  <br>
               Work perfomed at <a href="https://www.uber.com/">Uber </a> <br> <br>
 			  
-              <em>I've worked on different projects spanning Software, Data Analytics & Business Modeling. Main focus was on improvements in the e-bike and scooter infrastructure, 
+              <em>I worked on multiple projects spanning Software, Data Analytics & Business Modeling. Main focus was on improvements in the e-bike and scooter infrastructure, 
 			  popularly know as <a href = "https://www.jump.com/"> JUMP</a>. 
-        I wrote programs in C++ for embedded Linux OS on IoT (Internet of Things) device on JUMP vehicles. I deployed python codes for automating the testing process. In the Data Analytics project, I programmed models using Python and SQL to query and gather crucial imformation on performance of GPS location service on both ebikes and scooters. This data will guide the development of specifications for future versions of the IoT device. For Business Modeling, I used SQL queries and past performance details to propose a new maintenance infrastructure to save operatinal expenses to the tunes of $60 millions. Of which, $30 million savings can be realized in 2 years. 
+        I wrote programs in C++ for embedded Linux OS on IoT (Internet of Things) device on JUMP vehicles. I deployed python codes for automating the testing process in real bikes. In the Data Analytics project, I programmed models using Python and SQL to query and gather crucial imformation on performance of GPS location service on both ebikes and scooters. 
+		      This data will guide the development of specifications for future versions of the IoT device. For Business Modeling, I used SQL queries and past performance details to propose a new maintenance infrastructure to save 70\% of operational expenses. 
         </em>
               <br>
               <a href="images/Uber_IVHM.jpg">[Image]</a>
