--- a/index.html
+++ b/index.html
@@ -377,8 +377,11 @@
           <tr>
             <td width="75%" valign="center">
               <p>
-                <p style="font-size:18px">At UIUC, I have been a teaching assistant for the following courses:</p>
+                <p style="font-size:18px">At UIUC, I worked as a teaching assistant for the following courses:</p>
                 <ul>
+			li><a href="https://mechanical.illinois.edu/courses/profile/ME470">
+                    <papertitle>Senior Design Project (Capstone) (ME 470) - Spring 2020</papertitle></a></li>
+                    
                   <li><a href="https://mechanical.illinois.edu/courses/profile/ME320">
                     <papertitle>Heat Transfer (ME 320) - Spring 2019</papertitle></a></li>
                     <li><a href="https://courses.engr.illinois.edu/tam210/fa2018/index.html">
