--- a/index.html
+++ b/index.html
@@ -211,8 +211,9 @@
 			  
               <em>I worked on multiple projects spanning Software, Data Analytics & Business Modeling. Main focus was on improvements in the e-bike and scooter infrastructure, 
 			  popularly know as <a href = "https://www.jump.com/"> JUMP</a>. 
-        I wrote programs in C++ for embedded Linux OS on IoT (Internet of Things) device on JUMP vehicles. I deployed python codes for automating the testing process in real bikes. In the Data Analytics project, I programmed models using Python and SQL to query and gather crucial imformation on performance of GPS location service on both ebikes and scooters. 
-		      This data will guide the development of specifications for future versions of the IoT device. For Business Modeling, I used SQL queries and past performance details to propose a new maintenance infrastructure to save 70\% of operational expenses. 
+        I wrote programs in C++ for embedded Linux OS on IoT (Internet of Things) device on JUMP vehicles. I deployed python codes for automating the testing process in real bikes. 
+		      In the Data Analytics project, I programmed models using Python and SQL to query and gather crucial imformation on performance of GPS location service on both ebikes and scooters. 
+		      This data will guide the development of specifications for future versions of the IoT device. For Business Modeling, I used SQL queries and past performance details to propose a new maintenance infrastructure to save 70% of operational expenses. 
         </em>
               <br>
               <a href="images/Uber_IVHM.jpg">[Image]</a>
@@ -379,8 +380,8 @@
               <p>
                 <p style="font-size:18px">At UIUC, I worked as a teaching assistant for the following courses:</p>
                 <ul>
-			li><a href="https://mechanical.illinois.edu/courses/profile/ME470">
-                    <papertitle>Senior Design Project (Capstone) (ME 470) - Spring 2020</papertitle></a></li>
+			<li><a href="https://mechanical.illinois.edu/courses/profile/ME470">
+                    <papertitle>Senior Design Project (ME 470) - Spring 2020</papertitle></a></li>
                     
                   <li><a href="https://mechanical.illinois.edu/courses/profile/ME320">
                     <papertitle>Heat Transfer (ME 320) - Spring 2019</papertitle></a></li>
