--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
               <img id="paper_img" src='images/UIUC_DOE_HXimg.jpg'>
             </td>
             <td width="75%" valign="center" >
-              <papertitle> Design and Manufacturing of novel hybrid metal-polymer heat exchangers (Ongoing) </papertitle>
+              <papertitle> Design and Manufacturing of novel hybrid metal-polymer heat exchangers </papertitle>
               <br> <br>
               <strong>Gowtham Kuntumalla</strong>,
 			  Manjunath Rajagopal, Yuquan Meng, HoChan Chang, Sreenath Sundar, Hanyang Zhao   
