--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
 			  Work perfomed at <a href="http://www.iitb.ac.in/">IIT Bombay </a> <br> <br>
 
 			  
-              <em> We wrote a C++ computer program for particle image velocimetry, which is a widely used non invasive flow measurement tool in research and industry. I think, the output images 
-			  produced by our program are beautiful! </em>
+              <em> We wrote a C++ computer program for particle image velocimetry, which is a widely used non invasive flow measurement tool in research and industry. The output images 
+			  produced by our program are simply beautiful! </em>
               <br>
 			  <a href="images/IITB_PIV_result3.gif">[Image]</a>
 			  <a href="files/IITB_PIV_slides.pdf">[Slides]</a>
