--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               </p>
 
               <p> <strong> Learning </strong>:  At Uber, I had an enriching experience working with consumer products at scale. Working on IoT and gathering cruical insights from terabytes of data was a wonderful learning experience for me.
-               During my Masters at UIUC, I developed a keen eye for detail and learned how to manage teams to achieve targets within deadlines. My undergrad education gave me a strong foundation in various theoretical and experimental aspects of Engineering.
+               During my Masters at UIUC, I developed a keen eye for detail and learned how to manage teams to achieve targets within deadlines. My undergraduate education gave me a strong foundation in various theoretical and experimental aspects of Engineering.
              </p>
 
              <p> <strong> Principle </strong>: I believe in the power of simplicity! It's the key to solving hard problems. </p> 
@@ -146,6 +146,17 @@
 
 
       <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+      	<tr>
+      		<td width="25%" valign="center">
+            <img id="inst_logo" src='images/FCC_image.png'>
+
+            <p><font size=2 px color="#800000"> <a href="http://forestcreekcap.com/">Forest Creek Capital LLC</a>  </font></p>
+            <p><font size=2 px color="#800000" > [2020 - current]</font></p>
+            <p><font size=2 px color="#000000" > Quantitative Analyst & Trader</font></p>
+          </td>
+
+      	</tr>
+
         <tr>
           <td width="25%" valign="center">
             <img id="inst_logo" src='images/UIUC_logo.jpg'>
@@ -469,7 +480,7 @@
             <td width="75%" valign="center">
               <p>
                 <ul>
-                  <li>I love playing Badminton and reading novels in my free time. Books by Ayn Rand, Satyajit Ray & Jeffrey Archer are my personal favorites.
+                  <li>I love playing Badminton and reading novels in my free time. Books written by Ayn Rand, Satyajit Ray & Jeffrey Archer are my personal favorites. I read Brandon Sanderson's fiction books as well.
                    <li> In my third year at IITB, a hostel team led by me made this Rube Goldberg machine  <a href ="https://www.youtube.com/watch?v=MYQxAyiaZkA"> (video) </a> with limited resources. Btw, it won the first prize in a collegiate competition. 
                    </li>
                  </ul>	  
@@ -482,22 +493,28 @@
 
          <!--  ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;  -->
 
-         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
 
 
-          <tr><td>
-            <br>
-
+          <tr>
+          	<td width="25%" valign="left">
+          	Last Modified : August 1, 2020
+          </td>
+          	
+          <td width="25%" valign="right">
 			<!-- <p align="center"><font size="2">
               <a href='http://www.counter12.com'><img src='http://www.counter12.com/img-9adC6B73cWCA0az6-36.gif' border='0' alt='conter12'></a>
 			<script type='text/javascript' src='http://www.counter12.com/ad.js?id=9adC6B73cWCA0az6'>
       </script></font></p> -->
 
+		
+	      <p align="right"><font size="2">
+	      	 
+	        <a href="http://www.cs.berkeley.edu/~barron/">Modified a clone of this simple website!</a>
+	      </font></p>
+	    </td>
 
-      <p align="right"><font size="2">
-        <a href="http://www.cs.berkeley.edu/~barron/">Modified a clone of this simple website!</a>
-      </font></p>
-    </td></tr>
+	</tr>
   </table>
 
 </body>
