--- a/index.html
+++ b/index.html
@@ -106,15 +106,21 @@
 
               <p> I'm passionate about building impactful products at the intersection of Engineering and Computer Science. 
                 I'm a self-taught coder and like staying up to date with the latest trends in the world of software programming and data science. Also, I am an active investor/trader in the financial markets.
+
+                At Forest Creek Capital, I work on building quantitative trading strategies with end-to-end ownership of a trading desk. 
               </p>
 
-              <p> <strong> Learning </strong>:  At Uber, I had an enriching experience working with consumer products at scale. Working on IoT and gathering cruical insights from terabytes of data was a wonderful learning experience for me.
+              <p> <strong> Learning </strong>:  
+
+                At FCC, I realized the value of a growth mindset in approaching new things. It is very conducive to professional development.
+
+                At Uber, I had an enriching experience working with consumer products at scale. Working on IoT and gathering critical insights from terabytes of data was a wonderful learning experience for me.
                During my Masters at UIUC, I developed a keen eye for detail and learned how to manage teams to achieve targets within deadlines. My undergraduate education gave me a strong foundation in various theoretical and experimental aspects of Engineering.
              </p>
 
              <p> <strong> Principle </strong>: I believe in the power of simplicity! It's the key to solving hard problems. </p> 
 
-             <p><strong> Education </strong>: I graduated with a Master's degree in Mechanical Engineering from <a href="https://www.illinois.edu/">UIUC</a> in 2020, where I performed research in manufacturing and did coursework in theoretical and applied data science. 
+             <p><strong> Education </strong>: I graduated with a Master of Computer Science in 2023 and a Master of Science in Mechanical Engineering in 2020 both from <a href="https://www.illinois.edu/">UIUC</a> , where I performed research in manufacturing and did coursework in theoretical and applied data science. 
               <!-- My current academic advisor is Prof. <a href="https://mechanical.illinois.edu/directory/faculty/sanjiv">Sanjiv Sinha</a> -->
               In 2018, I received my Bachelor's degree in Mechanical Engineering with a minor in Computer Science from <a href="http://www.iitb.ac.in/">IIT Bombay</a>.  
             </p>
@@ -480,7 +486,7 @@
             <td width="75%" valign="center">
               <p>
                 <ul>
-                  <li>I love playing Badminton and reading novels in my free time. Books written by Ayn Rand, Satyajit Ray & Jeffrey Archer are my personal favorites. I read Brandon Sanderson's fiction books as well.
+                  <li>I love playing Badminton and staying active. I read novels and watch TV shows in my free time. Books written by Satyajit Ray, Brandon Sanderson, Ayn Rand, and Jeffrey Archer are my personal favorites.
                    <li> In my third year at IITB, a hostel team led by me made this Rube Goldberg machine  <a href ="https://www.youtube.com/watch?v=MYQxAyiaZkA"> (video) </a> with limited resources. Btw, it won the first prize in a collegiate competition. 
                    </li>
                  </ul>	  
@@ -498,7 +504,7 @@
 
           <tr>
           	<td width="25%" valign="left">
-          	Last Modified : August 1, 2020
+          	Last Modified : July 4, 2023
           </td>
           	
           <td width="25%" valign="right">
